User manual: variables

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -302,36 +302,98 @@ An \imitator{} parametric timed automaton (hereafter \IPTA{}) is a variant of pa
 \emph{Clocks} are real-valued variables.
 A set of clocks is $\Clock = \{ \clock_1, \dots, \clock_\ClockCard \}$;
 a clock valuation is
-$\clockval \colon \Clock \rightarrow \grandrplus$.
+$\clockval : \Clock \rightarrow \setRplus$.
 By default, all clocks are evolving at the same rate (1), but this rate can be defined to any rational value in \imitator{}.
-Clocks can also be \emph{stopped} in \imitator{}.
+Clocks can also be \emph{stopped} in \imitator{}, \ie{} their rate can be null.
 
 \emph{Parameters} are rational-valued variables, that act as unknown constants.
 A set of parameters is $\Param = \{ \param_1, \dots, \param_\ParamCard \} $;
-a parameter valuation is a function $\pval\colon \Param \rightarrow \grandr$.
+a parameter valuation is a function $\pval : \Param \rightarrow \setR$.
 We will often identify a valuation~$\pval$ with the \emph{point} $(\pval(\param_1), \dots, \pval(\param_{\ParamCard}))$.
 
 
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-
-\subsection{Discrete variables}
+\subsection{Discrete variables}\label{section:discrete}
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-
 
+\imitator{} features \emph{discrete} variables.
+%
+Discrete variables\footnote{%
+	The name ``discrete variable'' comes from \hytech{}.
+}
+are global variables.
+Their value is global, in the sense that they are shared by all \IPTA{} of the model.
+They can be seen as syntactic sugar to represent a possibly unbounded number of locations.
+
+
+Discrete variables must be initialized to a single constant value in the \styleIMI{init} definition;
+if they are not, a warning is issued, and they are arbitrarily set to a standard value (\eg{}~0 for numerical variables, and to \BFalse{} for Boolean variables).
+
+Discrete variables can be tested in guards, and updated along transitions.
+
+\imitator{} currently supports three types of discrete variables:
+\begin{enumerate}
+	\item rational-valued variables
+	\item ``int''-valued variables (over 32~bits)
+	\item Boolean variables
+\end{enumerate}
+
+%------------------------------------------------------------
+\subsubsection{Rational-valued variables}
+%------------------------------------------------------------
+
 \emph{Rational variables} are rational-valued variables.
-A set of rational variables is $\RVar = \{ \rvar_1, \dots, \rvar_\RVarCard \} $;
-a rational variable valuation is a function $\rval \colon \RVar \rightarrow \grandn$.
 
-\emph{Integer variables} are bounded signed integer-valued variables encoded on 32 bits.
-A set of integer variables is $\IVar = \{ \ivar_1, \dots, \ivar_\IVarCard \} $;
-a integer variable valuation is a function $\ival \colon \IVar \in \left[-2147483648, 2147483647\right]$.
-Warning : All arithmetic operations over int64 are taken modulo $2^{32}$.
+In \imitator{}, rationals are exact and unbounded, just as in maths (\ie{} they are \emph{not} represented using a limited number of bits, such as 32 or 64 bits).
+%
+Rational variables are encoded in \imitator{} as \emph{exact rational arithmetics}, thanks to the GNU Multiple Precision Arithmetic (GMP) library.
+Therefore, neither floating-point approximation, nor overflow, can occur;
+%
+% Hence, no overflow can occur,
+and the representation of the constraints is always exact.
+Note that floating-point numbers (``float'') are totally absent from the \imitator{} implementation (except for the generation of graphical outputs).
 
-\emph{Boolean variables} are boolean-valued variables.
-A set of boolean variables is $\BVar = \{ \bvar_1, \dots, \bvar_\BVarCard \} $;
-a boolean variable valuation is a function $\bval \colon \BVar \in \{True, False\}$.
+In the following, we define the set of rational variables as $\RVar = \{ \rvar_1, \dots, \rvar_\RVarCard \} $;
+a rational variable valuation is a function $\rval : \RVar \rightarrow \setQ$.
 
-\emph{Discrete variables} are rational-valued, integer-valued or boolean-valued variables.
-A set of discrete variables is $\DVar = \RVar \cup \IVar \cup \BVar $;
-%a discrete variable valuation is a function $\dval \colon \DVar \rightarrow \grandn$.
+
+
+%------------------------------------------------------------
+\subsubsection{``Int''-valued variables}
+%------------------------------------------------------------
+
+\emph{Int variables} are bounded signed integer-valued variables encoded on 32 bits (which is architecture independent).
+
+Int variables are encoded in \imitator{} using the \styleFileContent{int} type of OCaml.
+
+\begin{becareful}[int encoding]
+	All arithmetic operations over the ``int'' variables are taken modulo $2^{32}$.
+	Overflow can therefore occur.
+	
+	For critical models, it is highly advised to use \emph{rational} variables instead (the computation using rational variables is slower but always exact).
+\end{becareful}
+
+Formally, the set of integer variables is $\IVar = \{ \ivar_1, \dots, \ivar_\IVarCard \} $;
+an integer variable valuation is a function $\ival : \IVar \rightarrow \setZ \cap \left[-2,147,483,648, +2,147,483,647\right]$.
+
+
+%------------------------------------------------------------
+\subsubsection{Boolean variables}
+%------------------------------------------------------------
+
+% \emph{Boolean variables} are boolean-valued variables.
+\imitator{} also features Boolean-valued variables.
+The set of Boolean variables is $\BVar = \{ \bvar_1, \dots, \bvar_\BVarCard \} $;
+a Boolean variable valuation is a function $\bval : \BVar \rightarrow \setB$, where $\setB = \{\BTrue, \BFalse \}$.
+
+
+%------------------------------------------------------------
+\subsubsection{Discrete variables}
+%------------------------------------------------------------
+
+The set of discrete variables is $\DVar = \RVar \cup \IVar \cup \BVar $.
+
+%a discrete variable valuation is a function $\dval : \DVar \rightarrow \setN$.
 
 
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-
@@ -339,16 +401,16 @@ A set of discrete variables is $\DVar = \RVar \cup \IVar \cup \BVar $;
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-
 
 Let us formalize the set of linear constraints allowed in \imitator{}.
-Given a set of variables~$\Var = \{ \var_1, \dots, \var_\VarCard \}$ (in the following, this set will be instantiated with $\Clock$ and/or $\Param$ and/or $\DVar$), a \emph{linear term} over $\Var$ is an expression of the form
+Given a set of variables~$\Var = \{ \var_1, \dots, \var_\VarCard \}$ (in the following, this set will be instantiated with $\Clock$ and/or $\Param$ and/or $\RVar$), a \emph{linear term} over $\Var$ is an expression of the form
 $$
 	\sum_{1 \leq i \leq n} \alpha_i \var_i + d
 $$
-for some $n \in \grandn$,
+for some $n \in \setN$,
 where
 $\var_{i} \in \Var$,
-$\alpha_{i} \in \grandq$, for $1 \leq i \leq n$,
+$\alpha_{i} \in \setQ$, for $1 \leq i \leq n$,
 and
-$d \in \grandq$.
+$d \in \setQ$.
 
 An~\emph{atomic constraint} over $\Var$ is an expression of the form
 % An \emph{inequality} over $\Clock$ and~$\Param$ is $e \bowtie 0$, where , and $e$ is a linear term %of the form
@@ -362,7 +424,7 @@ ${\bowtie} \in \{ <, \leq, =, \geq, > \}$.
 
 A~\emph{constraint} over $\Var$ is a conjunction of atomic constraints.
 We denote by $\LTerm(\Var)$ the set of linear terms over~$\Var$, and by $\LConstraint(\Var)$ the set of constraints over~$\Var$.
-In \imitator{}, we will consider constraints belonging to sets such as $\LConstraintXP$ (\ie{} the set of constraints over clocks and parameters), or $\LConstraintXPD$ (\ie{} the set of constraints over clocks, parameters and discrete variables).
+In \imitator{}, we will consider constraints belonging to sets such as $\LConstraintXP$ (\ie{} the set of constraints over clocks and parameters), or $\LConstraintXPD$ (\ie{} the set of constraints over clocks, parameters and discrete rational-valued variables).
 
 
 
@@ -370,7 +432,7 @@ In \imitator{}, we will consider constraints belonging to sets such as $\LConstr
 \subsection{Arithmetic expressions}
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-
 
-Let $\ArithExprD$ denote the set of arithmetic expressions over the numerical discrete variables, \ie{} made of addition, subtraction, multiplication, and division over rational (or integer) constants and discrete numerical variables.
+Let $\ArithExprR$ denote the set of arithmetic expressions over the numerical discrete rational variables, \ie{} made of addition, subtraction, multiplication, and division over rational (or integer) constants and discrete numerical variables.
 
 
 
@@ -381,6 +443,13 @@ Let $\ArithExprD$ denote the set of arithmetic expressions over the numerical di
 
 % \paragraph{\imitator{} Parametric Timed Automata}
 We can now give a formal definition of \IPTA{}.
+
+%------------------------------------------------------------
+\begin{remark}
+	In the subsequent formal definition, we rule out int-valued variables and Boolean variables, for sake of simplicity.
+	They can be used in a straightforward manner.
+\end{remark}
+%------------------------------------------------------------
 
 Let $\unobs$ denote the unobservable action.
 
@@ -395,14 +464,14 @@ Let $\unobs$ denote the unobservable action.
 		\item $\Clock$ is a set of clocks;
 		\item $\Param$ is a set of parameters;
 		\item $\invariant : \Loc \rightarrow \LConstraintXPD$ assigns to every location~$\loc$ a constraint over all variables, called the \emph{invariant} of~$\loc$;
-		\item $\flow : \Loc \times \Clock \rightarrow \grandq$ assigns to a every location and clock a given flow (or speed), \ie{} a rational number;
+		\item $\flow : \Loc \times \Clock \rightarrow \setQ$ assigns to a every location and clock a given flow (or speed), \ie{} a rational number;
 		\item $\steps$ is a set of edges $(\loc, \guard, \action, \Cupdates, \Dupdates, \loc')$, where
 		      $\loc, \loc' \in \Loc$ are the source and destination locations,
 		      $\guard \in \LConstraintXPD$ is a constraint over all variables (called \emph{guard} of the transition),
 		      $\action \in \Action \cup \{ \unobs \}$ is the action associated with the transition,
 		      $\Cupdates : \Clock \rightharpoonup \LTermXPD$ is the (possibly partial) update function for clocks, and
 		      % TODO: sure that we can update to anything??
-		      $\Dupdates : \DVar \rightharpoonup \ArithExprD$ is the (possibly partial) update function for discrete variables.
+		      $\Dupdates : \RVar \rightharpoonup \ArithExprR$ is the (possibly partial) update function for discrete rational variables.
 	\end{itemize}
 \end{definition}
 %------------------------------------------------------------
@@ -412,8 +481,8 @@ In the following, we explain this definition.
 \paragraph{Guards and invariants}
 Guards and invariants in \imitator{} are linear constraints over all variables.
 For example, the following expression can be used in a guard or an invariant:
-$$ \styleIMI{i1 + .5 x1 + 3 x2 >= 2 p1 - i2 \& p2 < 1/3} $$
-where \styleIMI{i1}, \styleIMI{i2} are discrete variables, \styleIMI{x1}, \styleIMI{x2} are clocks and \styleIMI{p1}, \styleIMI{p2} are parameters.
+$$ \styleIMI{r1 + .5 x1 + 3 x2 >= 2 p1 - r2 \& p2 < 1/3} $$
+where \styleIMI{r1}, \styleIMI{r2} are discrete rational variables, \styleIMI{x1}, \styleIMI{x2} are clocks and \styleIMI{p1}, \styleIMI{p2} are parameters.
 This syntax includes in particular diagonal constraints (\eg{} \styleIMI{x1 - x2 <= 2}), not always supported in other model-checking tools.
 
 \paragraph{Actions}
@@ -422,16 +491,17 @@ For the semantics of the synchronization model between various \IPTA{}, refer to
 A non-silent transition is said to be \emph{observable}; and it can be synchronized with other automata.
 
 \paragraph{Clock updates}
-Observe that clocks can be updated to any value, \ie{} a clock can be assigned not only to~0, but to any linear term over the other clocks, the parameters and the discrete variables.
+Observe that clocks can be updated to any value, \ie{} a clock can be assigned not only to~0, but to any linear term over the other clocks, the parameters and the discrete rational variables.
 This considerably extends the traditional syntax of PTAs defined in~\cite{AHV93}.
 In fact, the \imitator{} includes (more than just) the updatable timed automata of~\cite{BDFP04}, as well as the reset-to-parameter (parametric) timed automata of~\cite{ALR18PresetTA}.
 If clocks are always reset to constants (\ie{} not assigned to more complex linear terms), \imitator{} will apply some optimizations that (may) increase the analysis speed.
 % TODO: nice box with a ``tip'' title
 
 \paragraph{Discrete updates}
-Discrete variables can be assigned to arithmetic expressions over~$\DVar$.
-On the one hand, this is more restrictive than clock updates, because discrete variables cannot be assigned to a clock or to a parameter.
-On the other hand, arithmetic expressions are richer than linear constraints, as they allow multiplication or division of variables with each other.
+Discrete variables can be assigned to expressions compatible with their type.
+Notably, rational variables can be assigned to rational arithmetic expressions over~$\RVar$.
+On the one hand, this is more restrictive than clock updates, because discrete rational variables cannot be assigned to a clock or to a parameter.
+On the other hand, arithmetic expressions are richer than linear constraints, as they allow multiplication or division of rational variables with each other.
 
 Since version 2.12, \styleIMI{if}-\styleIMI{then}-\styleIMI{else} conditions are allowed in \emph{discrete} updates.
 
@@ -473,7 +543,7 @@ A stopwatch has flow~0.
 	\noindent
 	\styleIMI{x} is assigned both flow~0 (because it is defined as a stopped clock) and 2 (in the explicit flow definition).
 
-	Alternatively, in a \NIPTA{}, it is possible to be in a global location such that, in one location of one of the automata a given clock is assigned a given flow, and in another location of another automata in parallel, the same clock is assigned another flow.
+	Alternatively, in an \NIPTA{}, it is possible to be in a global location such that, in one location of one of the automata a given clock is assigned a given flow, and in another location of another automata in parallel, the same clock is assigned another flow.
 
 	In the case of such contradictory flows, \imitator{} will trigger a warning on-the-fly, and the result of the analysis is unspecified.
 \end{remark}
@@ -497,7 +567,7 @@ Note however that ``in $0$-time'' does not necessarily mean immediately: that is
 
 %------------------------------------------------------------
 \begin{definition}[\NIPTA{}]
-	Given a set of \IPTA{} $\A_i = \tuple{\Action_i, \Loc_i, (\locinit)_i, \DVar_i, \Clock_i, \Param_i, \invariant_i, \flow_i, \steps_i}$, $1 \leq i \leq N$ for some $N \in \grandn$,
+	Given a set of \IPTA{} $\A_i = \tuple{\Action_i, \Loc_i, (\locinit)_i, \DVar_i, \Clock_i, \Param_i, \invariant_i, \flow_i, \steps_i}$, $1 \leq i \leq N$ for some $N \in \setN$,
 	a network of \IPTA{} (\emph{\NIPTA{}}) is a tuple
 	$\tuple{\Action, \DVar, \Clock, \Param, \{ \A_i \mid 1 \leq i \leq N \}, \Cinit}$, where:
 	\begin{itemize}
@@ -505,7 +575,7 @@ Note however that ``in $0$-time'' does not necessarily mean immediately: that is
 		\item $\DVar = \bigcup_{1 \leq i \leq N} \DVar_i$ is the set of all discrete variables;
 		\item $\Clock = \bigcup_{1 \leq i \leq N} \Clock_i$ is the set of all clocks;
 		\item $\Param = \bigcup_{1 \leq i \leq N} \Param_i$ is the set of all parameters;
-		\item $\Cinit \in \LConstraintXPD$ is the initial constraint over $\DVar$, $\Clock$ and $\Param$. % TODO
+		\item $\Cinit \in \LConstraintXPD$ is the initial constraint over $\RVar$, $\Clock$ and $\Param$. % TODO
 	\end{itemize}
 \end{definition}
 %------------------------------------------------------------
@@ -516,10 +586,10 @@ If a variable is required to be local to an \IPTA{}, then it should just not be 
 
 Different from many tools for (parametric) timed automata, clocks are not necessarily initially equal to~0 (this is similar to \hytech{}~\cite{HHW95} but different from \uppaal{}~\cite{LPY97}).
 The initial value of the clocks is defined by~$\Cinit$ (see \cref{section:init}).
-If nothing is defined in~$\Cinit$, then their value is supposed to be arbitrary (any real value greater or equal to~0).
+If nothing is defined in~$\Cinit$, then their value is supposed to be arbitrary (any real value).
 
 
-In a \NIPTA{}, a clock~$\clock$ is stopped in a location $(\loc_1, \dots, \loc_N)$ if it stopped in at least one of the locations~$\loc_i$, \ie{} $\clock \in \flow_i(\loc_i) = 0$ for some~$i \in \{ 1 , \dots , N \}$.
+In an \NIPTA{}, a clock~$\clock$ is stopped in a location $(\loc_1, \dots, \loc_N)$ if it stopped in at least one of the locations~$\loc_i$, \ie{} $\clock \in \flow_i(\loc_i) = 0$ for some~$i \in \{ 1 , \dots , N \}$.
 % TODO
 
 Note that parameters are not assumed to be positive; however, the behavior of \imitator{} has not been tested for negative parameters, and it is strongly advised to constrain them to be non-negative in $\Cinit$ (if it is not the case, a warning is issued by \imitator{}).
@@ -530,13 +600,13 @@ Finally, note that the number of \IPTA{}, locations, variables and actions that 
 
 \bigskip
 
-\imitator{} may use the determinism in (yet to come) algorithms; and the deterministic nature of a \NIPTA{} is detected by \imitator{}.
+\imitator{} may use the determinism in (yet to come) algorithms; and the deterministic nature of an \NIPTA{} is detected by \imitator{}.
 In our setting, the strong determinism denotes at most one transition going out from a location and labeled with a given observable (\ie{} non-silent) transition.
 Let us precisely define what it means:
 
 %------------------------------------------------------------
 \begin{definition}[strong determinism]
-	Let $\A$ be a \NIPTA{} made of $N$ \IPTA{} $\A_i = \tuple{\Action_i, \Loc_i, (\locinit)_i, \DVar_i, \Clock_i, \Param_i, \invariant_i, \flow_i, \steps_i}$, $1 \leq i \leq N$ for some $N \in \grandn$.
+	Let $\A$ be an \NIPTA{} made of $N$ \IPTA{} $\A_i = \tuple{\Action_i, \Loc_i, (\locinit)_i, \DVar_i, \Clock_i, \Param_i, \invariant_i, \flow_i, \steps_i}$, $1 \leq i \leq N$ for some $N \in \setN$.
 
 	$\A$ is \emph{strongly-deterministic} if
 	for all automaton $\A_i$,
@@ -546,99 +616,8 @@ Let us precisely define what it means:
 \end{definition}
 %------------------------------------------------------------
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Type system}\label{section:type_system}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Since version 3.1 \imitator{} support typed discrete variables. Few common primitive types as integer, rational and boolean are available. They can be declared with the following keywords :
-
-\begin{itemize}
-\item Rational: \styleIMI{discrete} or \styleIMI{rational}
-\item Integer (32 bits): \styleIMI{int}
-\item Boolean: \styleIMI{bool}
-\end{itemize}
-
-Theses types are divided into two categories: numerical and boolean. Integer and rational types belong to numerical category, while boolean type belong to boolean category.
-
-\imitator{} models are statically typed in the sense of their variables and expressions types are resolved upstream of the algorithms execution.
-
-In this continuity, discrete variables are not latently typed. The types are associated with variables and not with values. In other terms, once a variable is declared with a defined type, it only accept this type.
-
-\subsection{Type checking}
-
-In order to verify the model type consistency, a step called type checking, is applied - during the semantic analysis - on all expressions of the model: declarations, assignments, updates, conditions (\styleIMI{if-then-else}), guards and invariants. Type checking step do the following :
-
-\begin{itemize}
- \item It check type consistency within the expressions
- \item It resolve the types of the expressions
- \item It apply a numerical type to literal numbers according to the numerical type holding by their outer expression
- \item It check consistency between an expression type and variable type, in case of assignment
- \item It check consistency between an expression type and it's grammar rule
-\end{itemize}
-
-\subsection{Expression type solving}
-
-The expression tree is traversed (depth-first search) in order to deduce it's type. As soon as a variable, constant or literal is found, the expression take it's type. If the expression only contain literals numbers, it will be deduce as a rational arithmetic expression. 
-
-All variables, constants or literals types must be in accordance with each other. In other words, an expression doesn't support the mixing of different types because \imitator{} model language doesn't support implicit conversion.
-
-If an expression mix different types, a type error is raise
 
 
-\subsection{Literal number type inference}
-
-The types of literal numbers are automatically resolved during the semantic analysis and more precisely during the type checking step. Once an expression type is resolved, all literal numbers within are automatically typed as the numerical type holding by the expression. 
-
-For example, in the following update expression \styleIMI{b := True \& i < 3 + 1} with \styleIMI{i : int}, literal numbers \styleIMI{3} and \styleIMI{1}  will be automatically typed as a \styleIMI{int}.
-
-\subsection{Type conversion}
-
-As said previously, there is no implicit conversion of variables, constants or literals from one type to another type. All expressions are holding exactly one type and cannot mix different types. However, it's possible to convert an expression to another type using built-in conversion functions:
-
-\begin{itemize}
-\item \styleIMI{rational\_of\_int}: convert an int expression to a rational one
-\end{itemize}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Discrete rational variables}\label{section:discrete}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Discrete rational variables\footnote{%
-	The name ``discrete variable'' comes from \hytech{}.
-}
-are global rational-valued variables.
-Their value is global, in the sense that they are shared by all \IPTA{} of the model.
-They can be seen as syntactic sugar to represent a possibly unbounded number of locations.
-
-In \imitator{}, rationals are exact and unbounded, just as in maths (\ie{} they are \emph{not} represented using a limited number of bits, such as 32 or 64 bits).
-Hence, no overflow can occur, and the representation of the constraints is always exact.
-Note that floating-point numbers (``float'') are totally absent from the \imitator{} implementation (except for the generation of graphical outputs).
-
-Discrete rational variables must be initialized to a single constant value in the \styleIMI{init} definition;
-if they are not, a warning is issued, and they are arbitrarily set to~0.
-
-Discrete rational variables can be tested in guards, and updated along transitions.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Discrete integer variables}\label{section:discrete_int}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Discrete integer variables are global integer-valued variables. As the same manner as discrete rational variables, their value is global. Discrete integer variables are encoded by a 32 bits signed integer and is architecture independent. The range of it's values is \styleIMI{[-2147483648, 2147483647]}. Integer are exact but bounded, so overflow can occur. In this case, \imitator{} can have an unspecified behavior.
-
-Discrete integer variables must be initialized to a single constant expression or value, of the same type, in the init discrete definition; if they are not, a warning is issued, and they are arbitrarily set to 0.
-
-As well as discrete rational variables, discrete integer variables can be tested in guards, and updated along transitions.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Discrete boolean variables}\label{section:discrete_boolean}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Discrete boolean variables are global boolean-valued variables. As the same manner as discrete rational variables, their value is global. Discrete boolean variables are encoded by two values : \styleIMI{True} or \styleIMI{False}.
-
-Discrete boolean variables must be initialized to a single constant boolean expression or boolean value in the init discrete definition; if they are not, a warning is issued, and they are arbitrarily set to False.
-
-As well as discrete rational variables, discrete boolean variables can be tested in guards, and updated along transitions.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Discrete variables updates}\label{section:discrete_boolean}
@@ -947,7 +926,7 @@ The semantics of these properties is detailed in~\cite{Andre13ICECCS}.
 \section{Parametric deadlock-freeness checking}\label{ss:mode:PDFC}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Given a \NIPTA{}, \PDFC{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the system is deadlock-free~\cite{Andre16}.
+Given an \NIPTA{}, \PDFC{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the system is deadlock-free~\cite{Andre16}.
 
 The property syntax is as follows:
 
@@ -969,7 +948,7 @@ output the constraint synthesized in a graphical form in two dimensions (option 
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
 \subsection{Accepting cycle synthesis}\label{ss:accepting-loop}
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
-Given a \NIPTA{}, \imitator{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the system contains at least one \emph{accepting} cycle, \ie{} an infinite run passing infinitely often by location matching an accepting condition.
+Given an \NIPTA{}, \imitator{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the system contains at least one \emph{accepting} cycle, \ie{} an infinite run passing infinitely often by location matching an accepting condition.
 Such accepting conditions are given in the form of a state predicate, \ie{} a conjunction or disjunction of locations and values for discrete variables.
 
 \imitator{} implements two algorithms to this goal:
@@ -1013,7 +992,7 @@ This (non-default) algorithm can be called using the following option syntax:
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
 
 % BEGIN OLD VERSION
-% Given a \NIPTA{}, \imitator{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the system contains at least one accepting cycle.
+% Given an \NIPTA{}, \imitator{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the system contains at least one accepting cycle.
 % This algorithm differs from the one in \cref{sss:accepting-loop-BFS} in the sense that this algorithm performs a nested depth-first search (NDFS) exploration until a cycle is found~\cite{NPP18}.
 % In addition, this algorithm is (by default) not complete.
 %
@@ -1124,7 +1103,7 @@ to the user.
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
 
 
-Given a \NIPTA{}, \imitator{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the system contains at least one cycle, \ie{} an infinite run. % TODO: ~\cite{AL17}
+Given an \NIPTA{}, \imitator{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the system contains at least one cycle, \ie{} an infinite run. % TODO: ~\cite{AL17}
 
 The property syntax is as follows:
 
@@ -1146,7 +1125,7 @@ This is syntactic sugar for the following property:
 \section{Parametric non-Zeno cycle synthesis}\label{ss:mode:Zeno}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Given a \NIPTA{}, \imitator{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the system contains at least one cycle, under the non-Zeno assumption~\cite{ANPS17}.
+Given an \NIPTA{}, \imitator{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the system contains at least one cycle, under the non-Zeno assumption~\cite{ANPS17}.
 That is, only parameter valuations yielding at least one non-Zeno cycle are synthesized.
 Parameter valuations yielding only Zeno-cycles or no cycles are ignored.
 
@@ -1201,7 +1180,7 @@ output the constraint synthesized in a graphical form in two dimensions (option 
 \section{Inverse method: Trace preservation and robustness}\label{ss:mode:IM}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Given a \NIPTA{} and a reference parameter valuation, the inverse method~\IM{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the set of traces is the same as for the reference valuation~\cite{ACEF09}.
+Given an \NIPTA{} and a reference parameter valuation, the inverse method~\IM{} synthesizes a parameter constraint such that, for any parameter valuation in that constraint, the set of traces is the same as for the reference valuation~\cite{ACEF09}.
 This problem is known as the trace-preservation synthesis, and formalized in~\cite{AM15}.
 The trace-preservation emptiness problem being undecidable~\cite{AM15}, the analysis is not guaranteed to terminate (although it often does in practice).
 
@@ -1240,7 +1219,7 @@ a result in an external text file (\stylePath{model.res}) and formatted using a 
 \section{Behavioral cartography}\label{ss:mode:BC}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Given a \NIPTA{} and a bounded parameter domain, the behavioral cartography~\BC{} synthesizes tiles, \ie{} parameter domains such that for any parameter valuation in that domain, the set of traces is the same~\cite{AF10}.
+Given an \NIPTA{} and a bounded parameter domain, the behavioral cartography~\BC{} synthesizes tiles, \ie{} parameter domains such that for any parameter valuation in that domain, the set of traces is the same~\cite{AF10}.
 The corresponding problem being undecidable, the analysis is not guaranteed to terminate; when it terminates, it may also leave ``holes'', \ie{} parameter domains not covered by any tile.
 % TODO: cite AM15
 
@@ -1917,6 +1896,59 @@ In short, a symbolic state in \imitator{} is made of the following elements:
 In \imitator{}, all rationals (\ie{} the value of the discrete variables and the coefficients used in the constraints) are unbounded rationals (implemented using GMP).
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Type system}\label{section:type_system}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+Since version 3.1 \imitator{} support typed discrete variables. Few common primitive types as integer, rational and boolean are available. They can be declared with the following keywords :
+
+\begin{itemize}
+\item Rational: \styleIMI{discrete} or \styleIMI{rational}
+\item Integer (32 bits): \styleIMI{int}
+\item Boolean: \styleIMI{bool}
+\end{itemize}
+
+Theses types are divided into two categories: numerical and boolean. Integer and rational types belong to numerical category, while boolean type belong to boolean category.
+
+\imitator{} models are statically typed in the sense of their variables and expressions types are resolved upstream of the algorithms execution.
+
+In this continuity, discrete variables are not latently typed. The types are associated with variables and not with values. In other terms, once a variable is declared with a defined type, it only accept this type.
+
+\subsection{Type checking}
+
+In order to verify the model type consistency, a step called type checking, is applied - during the semantic analysis - on all expressions of the model: declarations, assignments, updates, conditions (\styleIMI{if-then-else}), guards and invariants. Type checking step do the following :
+
+\begin{itemize}
+ \item It check type consistency within the expressions
+ \item It resolve the types of the expressions
+ \item It apply a numerical type to literal numbers according to the numerical type holding by their outer expression
+ \item It check consistency between an expression type and variable type, in case of assignment
+ \item It check consistency between an expression type and it's grammar rule
+\end{itemize}
+
+\subsection{Expression type solving}
+
+The expression tree is traversed (depth-first search) in order to deduce it's type. As soon as a variable, constant or literal is found, the expression take it's type. If the expression only contain literals numbers, it will be deduce as a rational arithmetic expression. 
+
+All variables, constants or literals types must be in accordance with each other. In other words, an expression doesn't support the mixing of different types because \imitator{} model language doesn't support implicit conversion.
+
+If an expression mix different types, a type error is raise
+
+
+\subsection{Literal number type inference}
+
+The types of literal numbers are automatically resolved during the semantic analysis and more precisely during the type checking step. Once an expression type is resolved, all literal numbers within are automatically typed as the numerical type holding by the expression. 
+
+For example, in the following update expression \styleIMI{b := True \& i < 3 + 1} with \styleIMI{i : int}, literal numbers \styleIMI{3} and \styleIMI{1}  will be automatically typed as a \styleIMI{int}.
+
+\subsection{Type conversion}
+
+As said previously, there is no implicit conversion of variables, constants or literals from one type to another type. All expressions are holding exactly one type and cannot mix different types. However, it's possible to convert an expression to another type using built-in conversion functions:
+
+\begin{itemize}
+\item \styleIMI{rational\_of\_int}: convert an int expression to a rational one
+\end{itemize}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Installation}
@@ -2233,12 +2265,6 @@ This framework remains relatively experimental.
 Keep file(s) used for generating graphical output (\eg{} state space, cartography); these files are otherwise deleted after the generation of the graphics.
 
 
-
-
-% %------------------------------------------------------------
-% \paragraph{\styleOption{-imi2GrML} (default: disabled)}
-% %------------------------------------------------------------
-% Translates the input model to a GrML format (used by \CosyVerif{} \cite{AHHKLLP13}), and exits.
 
 %------------------------------------------------------------
 \paragraph{\styleOption{-imi2HyTech} (default: disabled)}
@@ -3728,7 +3754,7 @@ This can be simulated using an initialization \IPTA{} that nondeterministically 
 \section{Complex updates for discrete variables}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-So far, discrete variables can only be set to arithmetic expressions in $\ArithExprD$;
+So far, discrete variables can only be set to arithmetic expressions in $\ArithExprR$;
 hence, assigning a discrete variable to a clock, or to a parameter, or to any more complex expression, is not allowed.
 A reason for this restriction is that the value of the discrete variables would not anymore be constant (recall that discrete variables are syntactic sugar for \emph{locations}).
 
